src/tests/valid/ivdserial/dimensions.ivdserial
=================================Element========================================
Path: anonymous-2-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: size-a
Main Constraint
     |
10.000000i

=================================Element========================================
Path: anonymous-3-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: size-o
Main Constraint
     |
10.000000i

=================================Element========================================
Path: anonymous-4-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: size-o
Main Constraint
     |
10.000000i

------------Attr Key: size-a
Main Constraint
     |
10.000000i

